# specado

./: .gitignore  BINDINGS_STATUS.md  CODE_STYLE.md  CONFLICT_RESOLUTION_IMPLEMENTATION.md  Cargo.toml  FFI_ALIGNMENT_FIXES.md  FFI_BINDING_FIXES_SUMMARY.md  FFI_VALIDATION_SUMMARY.md  FINAL_VERIFICATION.md  ISSUE_37_SUMMARY.md  LOSSINESS_INTEGRATION_SUMMARY.md  README.md  TRANSFORMER_LOSSINESS_INTEGRATION.md  WORKTREE_FIXES_SUMMARY.md  llm  story_with_specado.sh  test_ffi_output.py  test_ffi_translation.rs  test_integration.js  test_integration.py  test_openai_gpt5_spec.py  test_prompt.json  test_request.json  test_worktree_fixes.py  validate_anthropic_spec.py  validate_provider_spec.py
.github/workflows/: ffi-tests.yml  rust.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_purpose.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
crates/specado-cli/: Cargo.toml
crates/specado-cli/src/: cli.rs  config.rs  error.rs  handlers.rs  logging.rs  main.rs  output.rs
crates/specado-cli/src/handlers/: completions.rs  config.rs  preview.rs  run.rs  translate.rs  utils.rs  validate.rs
crates/specado-cli/src/output/: tests.rs
crates/specado-core/: Cargo.toml
crates/specado-core/benches/: jsonpath_benchmarks.rs
crates/specado-core/examples/: cli.rs  test_advanced_features.rs
crates/specado-core/fuzz/: Cargo.toml
crates/specado-core/fuzz/corpus_seeds/: README.md  seed_malformed.txt  seed_valid.txt
crates/specado-core/fuzz/fuzz_targets/: jsonpath_execute.rs  jsonpath_malformed.rs  jsonpath_memory.rs  jsonpath_parse.rs
crates/specado-core/src/: error.rs  lib.rs  llm.rs  proptest_strategies.rs  provider_discovery.rs  response.rs  types.rs
crates/specado-core/src/http/: auth.rs  builder.rs  client.rs  diagnostics.rs  error.rs  fallback.rs  integration_tests.rs  mod.rs  network_errors.rs  normalizer.rs  rate_limit.rs  retry.rs  timeout.rs  tls.rs
crates/specado-core/src/provider_discovery/: error.rs
crates/specado-core/src/specs/: capabilities.rs  discovery.rs  mod.rs
crates/specado-core/src/translation/: builder.rs  conflict.rs  context.rs  lossiness.rs  mapper.rs  mod.rs  provider_loader.rs  provider_spec_tests.rs  strictness.rs  transformer.rs  validator.rs
crates/specado-core/src/translation/builder/: build.rs  core.rs  extensions.rs  lossiness.rs  mod.rs  request.rs  tests.rs  types.rs  validation.rs
crates/specado-core/src/translation/jsonpath/: ast.rs  error.rs  executor.rs  filter.rs  mod.rs  optimizer.rs  parser.rs  prop_tests.rs  selector.rs
crates/specado-core/src/translation/lossiness/: mod.rs  operations.rs  reporting.rs  statistics.rs  tests.rs  tracker.rs  types.rs
crates/specado-core/src/translation/transformer/: builder.rs  built_in.rs  mod.rs  pipeline.rs  tests.rs  types.rs
crates/specado-core/src/translation/validator/: constraint_validators.rs  core.rs  field_validators.rs  mod.rs  tests.rs  types.rs
crates/specado-core/tests/: golden_tests.rs  golden_translation_integration.rs  prop_translation.proptest-regressions  prop_translation.rs  provider_translation_integration.rs  response_normalization_test.rs  test_support.rs  translation_integration.rs  translation_integration_basic.rs
crates/specado-ffi/: Cargo.toml  MEMORY_MANAGEMENT.md  build.rs  cbindgen.toml
crates/specado-ffi/include/: specado.h
crates/specado-ffi/src/: api.rs  error.rs  lib.rs  memory.rs  run.rs  translate.rs  types.rs  validate.rs
crates/specado-ffi/tests/: boundary_tests.rs  test_translate_output.rs  verify_translation_result.rs
crates/specado-ffi/tests/c_tests/: test_ffi.c
crates/specado-golden/: Cargo.toml
crates/specado-golden/src/: corpus.rs  diff.rs  lib.rs  runner.rs  snapshot.rs
crates/specado-nodejs/: .gitignore  .npmignore  Cargo.toml  IMPLEMENTATION.md  README.md  build-test.sh  jest.config.js  package.json
crates/specado-nodejs/.github/workflows/: ci.yml
crates/specado-nodejs/examples/: basic-usage.js  typescript-example.ts
crates/specado-nodejs/src/: error.rs  lib.rs  run.rs  translate.rs  types.rs  validate.rs
crates/specado-nodejs/tests/: basic.test.ts  error.test.ts  performance.test.ts  run.test.ts  setup.ts  translate.test.ts  validate.test.ts
crates/specado-providers/: Cargo.toml
crates/specado-providers/src/: lib.rs
crates/specado-python/: .gitignore  Cargo.toml  MANIFEST.in  README.md  pyproject.toml
crates/specado-python/.github/workflows/: build-wheels.yml  test.yml
crates/specado-python/python/specado/: __init__.py  types.py
crates/specado-python/src/: error.rs  lib.rs  run.rs  translate.rs  types.rs  validate.rs
crates/specado-python/tests/: conftest.py  test_errors.py  test_integration.py  test_run.py  test_translate.py  test_types.py  test_validate.py
crates/specado-schemas/: Cargo.toml  LOADER_IMPLEMENTATION.md
crates/specado-schemas/examples/: generate_docs.rs  schema_loader_demo.rs  validation_demo.rs
crates/specado-schemas/src/: lib.rs
crates/specado-schemas/src/documentation/: generator.rs  mod.rs  parser.rs  templates.rs
crates/specado-schemas/src/loader/: cache.rs  error.rs  mod.rs  parser.rs  resolver.rs  schema_loader.rs
crates/specado-schemas/src/validation/: base.rs  error.rs  mod.rs  prompt_spec.rs  provider_spec.rs
crates/specado-schemas/src/versioning/: compatibility.rs  migration.rs  mod.rs  version.rs
crates/specado-schemas/tests/: prop_tests.proptest-regressions  prop_tests.rs  unit_prompt_spec.rs  unit_provider_spec.rs  unit_validation_common.rs
crates/specado-wasm/: Cargo.toml
crates/specado-wasm/src/: lib.rs
docs/: AIML_RESEARCH_SUMMARY.md  github-comprehensive-issue-plan.md  github-issue-plan.md  github-l1-complete-status.md  github-l1-implementation-status.md  github-setup-progress.md  github-setup-summary.md  provider-spec-v2-simplified.md  testing-strategy.md  validation-rules.md
docs/archive/: AI_GITHUB_WORKFLOW.md  (+3 more)
examples/: basic_usage.py  high_level_api.rs  test_advanced_functionality.py
golden-corpus/: README.md
schemas/: prompt-spec.schema.json  provider-spec.schema.json
(+39 files in other folders)
