[workspace]
members = [
    "crates/specado-core",
    "crates/specado-schemas",
    "crates/specado-providers",
    "crates/specado-cli",
    "crates/specado-ffi",
    "crates/specado-nodejs",
    "crates/specado-python",
    "crates/specado-wasm", 
    "crates/specado-golden",
]
exclude = ["crates/specado-core/fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Specado Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/specado/specado"
homepage = "https://github.com/specado/specado"
documentation = "https://docs.rs/specado"
keywords = ["llm", "ai", "translation", "provider", "spec-driven"]
categories = ["api-bindings", "command-line-utilities", "development-tools"]

[workspace.dependencies]
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
