[package]
name = "specado-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Command-line interface for Specado - validate, preview, run, and stream LLM requests"

[[bin]]
name = "specado"
path = "src/main.rs"

[dependencies]
# Core dependencies
specado-core = { path = "../specado-core" }

# CLI framework
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
clap_complete = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal output
colored = "2.1"
indicatif = "0.17"
atty = "0.2"

# File handling
dirs = "5.0"