[package]
name = "specado-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Core translation engine for Specado - spec-driven LLM prompt compilation"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
log = "0.4"
regex = "1.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "jsonpath_benchmarks"
harness = false