[package]
name = "specado-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Core translation engine for Specado - spec-driven LLM prompt compilation"

[features]
default = []
blocking = []  # Enable synchronous API methods that create internal runtime
flaky = []     # Enable flaky tests that may fail due to timing/randomness
dev-fallback = []  # Enable development fallback providers
legacy-mappings = []  # Enable legacy model mappings

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
log = "0.4"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
backoff = { version = "0.4", features = ["tokio"] }
url = "2.5"
rand = "0.8"
tracing = "0.1"
colored = "2.1"
dotenv = "0.15"

[dev-dependencies]
criterion = "0.5"
specado-golden = { path = "../specado-golden" }
proptest = "1.4"
tempfile = "3.8"

[[bench]]
name = "jsonpath_benchmarks"
harness = false