[package]
name = "specado-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "FFI bindings for Node.js and Python - Specado language bindings"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
specado-core = { path = "../specado-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { version = "1", features = ["rt", "macros"] }

[build-dependencies]
cbindgen = "0.26"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"