[package]
name = "specado-schemas"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "JSON Schema definitions and validators for PromptSpec and ProviderSpec"

[dependencies]
jsonschema = "0.32.1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"